**v0.3.0**
New Features:
1. Added CREATE TYPE generation from Python Enum & simple-ddl-parser types metadata
2. Added support for passing Directly models - added example how to use it in README.md

Improvements:
1. Added more test cases with models into tests

Fixes:

1. Fixed issue with "" in names if quotes already exists in table-name in metadata

**v0.2.0**

1. Updated parser version in tests.
2. Added support for EXTERNAL & IF NOT EXISTS statetements.
3. Added support for using py-models-parser output as input and added sample in README.md:

DDL Generation from Pydantic, SQLAlchemy and other python models.

**v0.1.0**

Base Generator Functionality with several test cases.