@@ -1,1 +1,1 @@
-CREATE TYPE {{type.name}} AS {{type.base_type}} {% if type.base_type.upper() == 'ENUM' %} ({%for value in type.properties['values'] %}{{value}}{{"," if not loop.last }}{%endfor%}){% endif %};
+CREATE TYPE {{type.name}} AS {{type.base_type.upper()}} {% if type.base_type.upper() == 'ENUM' %} ({%for value in type.properties['values'] %}{{value}}{{"," if not loop.last }}{%endfor%}){% endif %};
