@@ -5,6 +5,7 @@ New Features:
 
 Improvements:
 1. Added more test cases with models into tests
+2. Now output generated with empty line at the end
 
 Fixes:
 
